<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".daftar">

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:text="@string/ldaftar"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/enama"
        app:layout_constraintBottom_toTopOf="@id/textView43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:text="@string/ealamat"
        app:layout_constraintBottom_toTopOf="@+id/EdEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNama" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textPersonName|textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/eemail"
        app:layout_constraintBottom_toTopOf="@+id/edPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAlamat" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:text="@string/epass"
        app:layout_constraintBottom_toTopOf="@id/edrepas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EdEmail" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/erepass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="263dp"
        android:layout_marginRight="263dp"
        android:layout_marginBottom="163dp"
        android:clickable="true"
        android:contentDescription="@string/epass"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/edrepas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_save" />

</androidx.constraintlayout.widget.ConstraintLayout>